--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <a href="" class="nav-achor">Home</a>
         <a href="#about" class="nav-achor">About</a>
         <a href="#contact" class="nav-achor">Contact</a>
-        <a href="" class="nav-achor">Project</a>
+        <a href="#Project" class="nav-achor">Project</a>
 
 
     </nav>
@@ -25,45 +25,99 @@
         <div class="">
             <h1>
                 BHARTI HARINKHEDE
-                <p class="tagline">Full Stack WEb Devloper💻 </p>
+                <p class="tagline">Full Stack Web Devloper💻 </p>
             </h1><br>
-             <img src="./img/html-5.png" class="html-img">&nbsp;
-            <img src="./img/css-3.png" class="html-img">&nbsp;
-            <img src="./img/bootstrap-img.png" class="html-img">&nbsp;
+
+            <img src="./img/html-5.png" class="html-img">&nbsp;&nbsp;
+            <img src="./img/css-3.png" class="html-img">&nbsp;&nbsp;
+            <img src="./img/bootstrap-img.png" class="html-img">&nbsp;&nbsp;
             <img src="./img/code.png" class="html-img">&nbsp;&nbsp;
-            <img src="./img/github.png" class="html-img">&nbsp;
+            <img src="./img/github.png" class="html-img">&nbsp;&nbsp;
             <img src="./img/java-script.png" class="html-img">
-            
-        </div>
-</div>
-<div class="container">
-    <div class="port-infomation ">
-        <div class="about" id="about">
-          <h2>About</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque perferendis eum, magni dolor temporibus aperiam voluptatibus placeat natus impedit officiis! Sed voluptatibus ipsa aut necessitatibus quas libero impedit velit veniam!</p>
-        </div>
-        <div class="contact" id="contact">
-         <h2>Contact</h2>
-         <div class="social-media">
-            <a href="https://www.instagram.com/bharti.harinkhede44/?igshid=MzNlNGNkZWQ4Mg=="><img src="./img/instagram (1).png" class="social-logo"></a>
-            <a href="https://github.com/bhartiharinkhede44"><img src="./img/github.png" class="social-logo"></a>
-            <a href="https://wa.me/qr/4UBXJQYHHLJRC1"><img src="./img/whatsapp.png" class="social-logo"></a>
-            <a href="https://mail.google.com/mail/u/0/#inbox"><img src="./img/gmail (1).png" class="social-logo"></a>
-            <a href="https://www.linkedin.com/in/bharti-harinkhede-01520024b"><img src="./img/linkedin.png" class="social-logo"></a>
-         </div><br>
-         <b>Email :</b> bhartiharinkhede44@gmail.com<br><br>
-         <b>Mobile number:</b>7821892252
-       
+
         </div>
     </div>
+    <div class="container">
+        <div class="port-infomation ">
+            <div class="about" id="about">
+                <h2 class="text">About</h2>
+                <p class="abouthead">I Am BHARTI HARINKHEDE,<br>
+                    I have Complete My Bachelor
+                    Degree From RTMNU Nagpur .<br> I am Front-End-Webdeveloper.
 
-</div>
-<h2 class="project-head">Project💻 </h2>
-<div class="project-container">
-<div class="">Project-1</div>
-<div class="">Project-1</div>
-<div class="">Project-1</div>
-</div>
+                </p>
+            </div>
+            <div class="contact" id="contact">
+                <h2 class="text">Contact</h2>
+                <div class="social-media">
+                    <a href="https://www.instagram.com/bharti.harinkhede44/?igshid=MzNlNGNkZWQ4Mg=="><img
+                            src="./img/instagram (1).png" class="social-logo"></a>&nbsp;&nbsp;
+                    <a href="https://github.com/bhartiharinkhede44"><img src="./img/github.png" class="social-logo"></a>
+                    <a href="tel:+917821892252"><img src="./img/whatsapp.png" class="social-logo"></a>&nbsp;&nbsp;
+                    <a href="mailto:bhartiharinkhede44@gmail.com"><img src="./img/gmail (1).png"
+                            class="social-logo"></a>&nbsp;&nbsp;
+                    <a href="https://www.linkedin.com/in/bharti-harinkhede-01520024b"><img src="./img/linkedin.png"
+                            class="social-logo"></a>
+                </div><br>
+
+
+
+
+            </div>
+        </div>
+
+    </div>
+
+    <h1 class="project-head">Project 💻</h1>
+    <div class="project-container">
+        <div class="projectcard">
+            <img src="./img/Screenshot (59).png" class="project-img">
+            <h2>Pune-theITOCity</h2>
+            <p>The ITOCITY project was created to help IT enthusiasts and people curious about Pune's IT parks. We made
+                this platform using HTML and CSS. It lets you learn all about Pune's IT parks, like where they are and
+                how many buildings they have. You can also contact companies in these parks. As Pune becomes a big IT
+                hub, this project shows its tech progress and has a bright future.</p><br>
+            <a href="https://pune-theitocity.netlify.app/" class="projectbtn">Live Demo</a>
+            <a href="https://github.com/bhartiharinkhede44/pune-the-itocity-igcp1-first-group-project"
+                class="projectbtn">Source Code</a>
+        </div>
+        <div class="projectcard">
+            <img src="./img/first.png" class="project-img">
+            <h2>ECODRIVE IN INDIA</h2>
+            <p>Introduce "EcoDrive India" and its mission to transform transportation with
+                eco-friendly electric vehicles. Display an image of a cutting-edge EV model or the visionary
+                minds behind the EV revolution. Include a button saying "Discover More" to encourage
+                visitors to delve into the world of electric mobility. </p><br>
+            <a href="https://ecodrive-india-igcp-project.netlify.app/" class="projectbtn">Live Demo</a>
+            <a href="https://github.com/bhartiharinkhede44/ecodrive-India-IGCP1-Group-project-2"
+                class="projectbtn">Source Code</a>
+
+        </div>
+
+
+    </div>
+    <div class="footercontainer">
+        <div class="">
+            <h1 class="footename">Quick Links</h1>
+            <a href="" class="footerhead">Home</a><br>
+            <a href="" class="footerhead">About</a><br>
+            <a href="" class="footerhead">Contact</a><br>
+            <a href="" class="footerhead">Project</a>
+
+        </div>
+        <div class="">
+            <h1 class="nametag">Made by Bharti ❤️</h1>
+        </div>
+        <div class="contactfooter">
+            <h1>Contact</h1>
+            <a href="mailto:bhartiharinkhede44@gmail.com"
+                class="footerhead">Gmail:bhartiharinkhede44@gmail.com</a><br><br>
+            <a href="tel:+917821892252" class="footerhead">Contact Number:+917821892252</a>
+
+        </div>
+
+
+    </div>
 
 
 </body>
